--- a/styles.scss
+++ b/styles.scss
@@ -2,26 +2,59 @@ html,
 body,
 div,
 ul,
-li {
+li,
+h1,
+h2,
+h3 {
   display: flex;
 }
 
-html, body {
+html {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+html,
+body {
   flex: 1 0 100%;
   height: 100%;
   margin: 0;
   flex-direction: column;
   justify-content: center;
+  background-color: #f5f5f5;
+}
+
+.widget-desc {
+  margin: .5em 0;
+  text-transform: capitalize;
+}
+
+.widget-temp {
+  font-size: 3em;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: .5em 0;
+}
+
+.widget-country {
+  justify-self: flex-end;
 }
 
 .main-container {
-  display: flex;
+  flex: 1;
 }
 
 .widget-container {
-  display: flex;
+  flex: 1;
 }
 
 .widget {
-  display: flex;
+  background-color: #fff;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+  flex: 1 0 200px;
+  flex-direction: column;
+  min-height: 300px;
+  padding: 1em;
+  margin: 1em;
 }
