--- a/styles.scss
+++ b/styles.scss
@@ -5,7 +5,9 @@ ul,
 li,
 h1,
 h2,
-h3 {
+h3,
+label,
+input {
   display: flex;
 }
 
@@ -41,12 +43,28 @@ body {
   justify-self: flex-end;
 }
 
+.panel-container {
+  justify-content: center;
+  flex-direction: column;
+  margin: 1em;
+}
+
+.panel-label {
+  align-items: center;
+  align-self: center;
+  margin: .1em 0;
+}
+
 .main-container {
   flex: 1;
+  justify-content: center;
 }
 
 .widget-container {
   flex: 1;
+  margin: 0 auto;
+  max-width: 900px;
+  overflow: auto;
 }
 
 .widget {
