--- a/styles.scss
+++ b/styles.scss
@@ -15,6 +15,7 @@ html {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "PT Sans", Helvetica, Arial, sans-serif;
 }
 
 html,
