--- a/styles.scss
+++ b/styles.scss
@@ -28,6 +28,10 @@ body {
   background-color: #f5f5f5;
 }
 
+.loading {
+  justify-content: center;
+}
+
 .widget-desc {
   margin: .5em 0;
   text-transform: capitalize;
@@ -54,6 +58,8 @@ body {
   align-items: center;
   align-self: center;
   margin: .1em 0;
+  min-width: 150px;
+  justify-content: space-between;
 }
 
 .main-container {
